--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Description: Computes fast approximate Shapley values for any supervised
     learning model. Shapely values help to explain the predictions any "black box" model using ideas 
     from game theory; see Strumbel and Kononenko (2014) <doi.org/10.1007/s10115-013-0679-x> for details.
 License: GPL (>= 2)
+URL: https://github.com/bgreenwell/fastshap
+BugReports: https://github.com/bgreenwell/fastshap/issues
 Imports: ggplot2, plyr, Rcpp (>= 1.0.1), tibble
 LinkingTo: Rcpp
 RoxygenNote: 6.1.1
