--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ License: GPL (>= 2)
 URL: https://github.com/bgreenwell/fastshap
 BugReports: https://github.com/bgreenwell/fastshap/issues
 Imports: ggplot2, plyr, Rcpp (>= 1.0.1), tibble
-LinkingTo: Rcpp
+LinkingTo: 
+    Rcpp,
+    RcppArmadillo
 RoxygenNote: 6.1.1
 Suggests: 
     earth,
