--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
+sudo: false
 cache: packages
 
-after_success:
-  - Rscript -e 'covr::codecov()'
+r:
+- oldrel
+- release
+- devel
+
+env:
+  global:
+  - _R_CHECK_FORCE_SUGGESTS_=false
+
+r_build_args: "--no-build-vignettes"
+
+r_check_args: "--no-vignettes"
