--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: fastshap
 Type: Package
 Title: Fast Approximate Shapley Values
-Version: 0.0.3
+Version: 0.0.3.9000
 Authors@R: person("Brandon", "Greenwell", email = "greenwell.brandon@gmail.com", role =
          c("aut", "cre"), comment = c(ORCID = "0000-0002-8120-0084"))
 Description: Computes fast approximate Shapley values for any supervised 
-    learning model. Shapley values help to explain the predictions from any black box model using ideas 
-    from game theory; see Strumbel and Kononenko (2014) <doi:10.1007/s10115-013-0679-x> for details.
+    learning model. Shapley values help to explain the predictions from any 
+    black box model using ideas from game theory; see Strumbel and Kononenko 
+    (2014) <doi:10.1007/s10115-013-0679-x> for details.
 License: GPL (>= 2)
 URL: https://github.com/bgreenwell/fastshap
 BugReports: https://github.com/bgreenwell/fastshap/issues
@@ -16,14 +17,16 @@ Imports:
     plyr, 
     Rcpp (>= 1.0.1), 
     tibble
+Suggests: 
+    covr,
+    earth,
+    knitr,
+    mlbench,
+    reticulate,
+    rmarkdown,
+    tinytest
 LinkingTo: 
     Rcpp,
     RcppArmadillo
-RoxygenNote: 7.0.0
-Suggests: 
-    earth,
-    mlbench,
-    tinytest,
-    covr,
-    knitr,
-    rmarkdown
+RoxygenNote: 7.0.2
+VignetteBuilder: knitr
