--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(explain,xgb.Booster)
 S3method(force_plot,explain)
 export(explain)
 export(force_plot)
+export(gen_friedman)
 export(grid.arrange)
 importFrom(Rcpp,sourceCpp)
 importFrom(ggplot2,aes_string)
