add test with categorical features

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Suggests:
     reticulate,
     rmarkdown,
     rstudioapi,
-    tinytest
+    tinytest,
+    titanic
 LinkingTo: 
     Rcpp,
     RcppArmadillo
