--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_smooth)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(gridExtra,grid.arrange)
