--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: fastshap
 Type: Package
 Title: Fast Approximate Shapley Values
-Version: 0.0.5
+Version: 0.0.6
 Authors@R: person("Brandon", "Greenwell", email = "greenwell.brandon@gmail.com", role =
          c("aut", "cre"), comment = c(ORCID = "0000-0002-8120-0084"))
 Description: Computes fast (relative to other implementations) approximate 
@@ -32,8 +32,9 @@ Suggests:
     rstudioapi,
     tinytest,
     titanic,
-    xgboost
+    xgboost,
+    lightgbm
 LinkingTo: 
     Rcpp,
     RcppArmadillo
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
