--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,10 +1,10 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\.travis\.yml$
+^\.github$
 ^_pkgdown\.yml$
-^appveyor\.yml$
 ^codecov\.yml$
 ^docs$
+^lightgbm\.model$
 ^pkgdown$
 ^README\.Rmd$
 ^README\.md$
@@ -12,4 +12,3 @@
 ^slowtests$
 ^TODO\.md$
 ^vignettes$
-^\.github$
