--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,6 @@ importFrom(ggplot2,guides)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(gridExtra,grid.arrange)
+importFrom(magrittr,`%>%`)
 importFrom(stats,reorder)
 useDynLib(fastshap, .registration = TRUE)
