--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     utils,
     tidyr,
     viridis,
-    ggbeeswarm
+    ggforce
 Suggests: 
     AmesHousing,
     covr,
@@ -40,8 +40,6 @@ Suggests:
     tinytest,
     titanic,
     xgboost
-Remotes:
-    eclarke/ggbeeswarm
 LinkingTo: 
     Rcpp,
     RcppArmadillo
