--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: fastshap
 Type: Package
 Title: Fast Approximate Shapley Values
-Version: 0.0.5.9000
+Version: 0.0.7.9000
 Authors@R: person("Brandon", "Greenwell", email = "greenwell.brandon@gmail.com", role =
          c("aut", "cre"), comment = c(ORCID = "0000-0002-8120-0084"))
 Description: Computes fast (relative to other implementations) approximate 
@@ -19,7 +19,7 @@ Imports:
     matrixStats,
     plyr, 
     Rcpp (>= 1.0.1), 
-    tibble
+    tibble,
     utils
 Suggests: 
     AmesHousing,
