--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(explain,default)
 S3method(explain,lgb.Booster)
 S3method(explain,lm)
 S3method(explain,xgb.Booster)
+S3method(print,explain)
 export(explain)
 export(gen_friedman)
 importFrom(Rcpp,sourceCpp)
