--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.19.2
 pkgdown: 2.0.7
 pkgdown_sha: ~
-articles: {}
-last_built: 2023-04-30T17:10Z
+articles:
+  fastshap: fastshap.html
+last_built: 2023-05-05T16:21Z
 
