--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: fastshap
 Type: Package
 Title: Fast Approximate Shapley Values
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: person("Brandon", "Greenwell", email = "greenwell.brandon@gmail.com", role =
          c("aut", "cre"), comment = c(ORCID = "0000-0002-8120-0084"))
 Description: Computes fast (relative to other implementations) approximate 
@@ -23,6 +23,7 @@ Enhances:
 Suggests: 
     AmesHousing,
     covr,
+    earth,
     knitr,
     ranger,
     rmarkdown,
